DMP-4633 Review and resolve sonar issues with the master branch
Started to resolve sonar issues